// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.FileViewer Default values detailed 1`] = `
<Loading
  className="uu5-bricks-file-viewer"
  id="FV-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.FileViewer blockEnd="@@myBlockOff:" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer blockKey="Key" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer blockStart="@@myBlockOn:" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer className="my-classname" 1`] = `
<Table
  className="uu5-bricks-file-viewer my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer controlled=false 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer controlled=true 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer default props 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer disabled=false 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer disabled=true 1`] = `
<Table
  className="uu5-bricks-file-viewer uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer hidden=false 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer hidden=true 1`] = `
<Table
  className="uu5-bricks-file-viewer uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer id="myId" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="myId"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer mainAttrs=undefined 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer name="myName" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer nestingLevel="bigBox" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer nestingLevel="bigBoxCollection" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer nestingLevel="box" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer nestingLevel="boxCollection" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer nestingLevel="container" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer nestingLevel="inline" 1`] = `
<span>
  <ForwardRef
    header="FileViewer"
    ref_={[Function]}
  >
    <Table
      className="uu5-bricks-file-viewer"
      id="uuID"
      style={Object {}}
      title={null}
    >
      <table-tbody>
        <table-tr>
          <table-td
            className="uu5-bricks-file-viewer-block-of-lines"
            colorSchema="default"
          />
        </table-tr>
      </table-tbody>
    </Table>
  </ForwardRef>
  <Link
    onClick={[Function]}
  />
</span>
`;

exports[`UU5.Bricks.FileViewer nestingLevel="page" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.FileViewer nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.FileViewer nestingLevel="spa" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer noIndex=false 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer noIndex=true 1`] = `
<Table
  className="uu5-bricks-file-viewer uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer numbered=false 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer numbered=true 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-line-numbers uu5-common-right"
        colorSchema="default"
        mainAttrs={
          Object {
            "style": Object {
              "width": "1em",
            },
          }
        }
      />
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer parameters={"example":"some"} 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer pureRender=false 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer pureRender=true 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer selected=false 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer selected=true 1`] = `
<Table
  className="uu5-bricks-file-viewer uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer src=undefined 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer style="padding:8px; borderRadius: 2px" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer style={"backgroundColor":"red","color":"blue"} 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer tooltip="My Tooltip" 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer trimmed=false 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;

exports[`UU5.Bricks.FileViewer trimmed=true 1`] = `
<Table
  className="uu5-bricks-file-viewer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table-tbody>
    <table-tr>
      <table-td
        className="uu5-bricks-file-viewer-block-of-lines"
        colorSchema="default"
      />
    </table-tr>
  </table-tbody>
</Table>
`;
